Fix image sizes on small width devices

--- a/web/style/header.css
+++ b/web/style/header.css
@@ -2,7 +2,6 @@ header {
 	background-image: url("../images/bm.jpg");
 	background-size: cover;
 	-webkit-background-size: cover;
-	height: 18em;
 
 	display: flex;
 	align-items: flex-end;
@@ -11,6 +10,8 @@ header {
 blockquote {
 	width: 100%;
 	padding: 1em;
+
+	margin-top: 9em;
 
 	text-align: center;
 
